# Anatar

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  conanfile.txt  dependencies.cmake  profile.txt
src/: CMakeLists.txt  animation.cc  animation.h  animation_component.cc  animation_component.h  config.h.in  entity.cc  entity.h  fps.cc  fps.h  game.cc  game.h  main.cc  movement_component.cc  movement_component.h  player.cc  player.h  player_input.cc
src/bullet/: beam.cc  beam.h  beam_factory.h  bullet.cc  bullet.h  bullet_system.cc  bullet_system.h  collision.h  i_bullet_factory.h  i_bullet_system.h  projectile.cc  projectile.h  projectile_factory.h
src/bullet/types/: beam.cc  beam.h  beam_factory.h  debris.h  debris_factory.h  homing_projectile.cc  homing_projectile.h  homing_projectile_factory.h  projectile.cc  projectile.h  projectile_factory.h
src/components/: animation_component.cc  animation_component.h  global_movement_component.cc  hitbox_component.cc  hitbox_component.h  i_hitbox_component.h  movement_component.cc  movement_component.h
src/components/animation/: animation.cc  animation.h  animation_component.cc  animation_component.h  animation_component_factory.h  i_animation_component.h  i_animation_component_factory.h
src/components/attributes/: health_attribute_component.cc  health_attribute_component.h  i_attribute_component.h  i_player_attribute_component.h  player_attribute_component.cc  player_attribute_component.h
src/components/collision_detection/: collision_detection_component.cc  collision_detection_component.h  i_collision_detection_component.h
src/components/hitbox/: hitbox_component.cc  hitbox_component.h  hitbox_component_factory.h  i_hitbox_component.h  i_hitbox_component_factory.h  inert_hitbox_component.h
src/components/movement/: enemy_movement_component.cc  enemy_movement_component.h  global_movement_component.cc  global_movement_component.h  i_global_movement_component.h  i_local_movement_component.h  i_player_movement_component.h  offset_movement_component.cc  offset_movement_component.h  orbital_movement_component.cc  orbital_movement_component.h  player_movement_component.cc  player_movement_component.h
src/components/weapon/: burst_shot_weapon_component.cc  burst_shot_weapon_component.h  i_weapon_component.cc  i_weapon_component.h  i_weapon_component_factory.h  inert_weapon_component.h  player_weapon_component.cc  player_weapon_component.h  single_shot_weapon_component.cc  single_shot_weapon_component.h
src/components/weapon/accessors/: weapon_accessors.h
src/components/weapon/beam/: burst_shot_weapon_component.h  radial_beam_weapon_component.cc  radial_beam_weapon_component.h  radial_beam_weapon_component_factory.h  simple_beam_weapon_component_factory.h  single_beam_weapon_component.cc  single_beam_weapon_component.h
src/components/weapon/burst/: burst_shot_weapon_component.cc  burst_shot_weapon_component.h  burst_shot_weapon_component_factory.h  random_shot_weapon_component.cc  random_shot_weapon_component.h  random_shot_weapon_component_factory.h
src/components/weapon/player/: player_weapon_component.cc  player_weapon_component.h
src/components/weapon/single/: single_shot_weapon_component.cc  single_shot_weapon_component.h  single_shot_weapon_component_factory.h
src/enemy/: enemy.cc  enemy.h  enemy_builder.cc  enemy_builder.h  enemy_system.cc  enemy_system.h  enemy_type_factory.cc  enemy_type_factory.h  i_enemy_type_factory.h
src/entity/: entity.cc  entity.h  entity_composition.cc  entity_composition.h  entity_object.cc  entity_object.h  entity_update.h  i_entity_builder.h
src/factories/: animation_component_factory.h  hitbox_component_factory.h  i_animation_component_factory.h
src/game_states/: game_states.h
src/game_states/menu/: menu_state.cc  menu_state.h
src/game_states/play/: i_play_state_builder.h  play_state.cc  play_state.h  play_state_builder.cc  play_state_builder.h
src/level/: space_level.cc  space_level.h
src/player/: player.cc  player.h  player_builder.cc  player_builder.h  player_entity_builder.cc  player_entity_builder.h  player_input.cc  player_input.h
src/quad_tree/: collision_quad_tree.h  quad_tree.h  shapes.cc  shapes.h
src/renderer/: composite_renderer.cc  composite_renderer.h  glow_shader_renderer.h  i_glow_shader_renderer.h  i_renderer.h
src/state/: state.h
src/ui/: fps.cc  fps.h  i_player_hud.h  player_hud.cc  player_hud.h
src/util/: container_utils.h  fps.cc  fps.h  glow_shader_renderer.cc  glow_shader_renderer.h  i_glow_shader_renderer.h  i_random_number_source.h  i_ray_caster.h  i_texture_atlas.h  i_threaded_workload.h  math_helpers.h  math_utils.h  random_number_mersenne_source.cc  random_number_mersenne_source.h  ray_caster.cc  ray_caster.h  texture_atlas.cc  texture_atlas.h  threaded_workload.cc  threaded_workload.h
test/: CMakeLists.txt  player_builder-test.cc  sample-test.cc
